src/shared/components/CinemaPagination/cinemaPagination.scss
@import '../../styles/mixins.scss';
.cinema-pagination {
  position: relative;
  z-index: 5;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.arrow-pagination {
  display: flex;
  position: relative;
  width: inherit;
}

.cinema-pagination--children {
  display: flex;
  flex-flow: wrap;
  width: inherit;
  justify-content: center;

  @include phones() {
    flex-flow: column-reverse;
  }
}

.cinema-pagination--nav {
  position: relative;
  display: flex;
  justify-content: center;
  min-width: 50px;
  height: 50px;
}

.cinema-pagination--btn {
  position: fixed;
  top: 50%;
  cursor: pointer;
  border: none;
  border-radius: 50%;
  background: none;
  font-size: 3em;
  color: orangered;
  transition: 0.3s;
  outline: none;
  z-index: 50;

  &:hover {
    color: aqua;
  }

  @include phones() {
    top: 40%;
  }
}

